<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whill_navi2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="k895657@kansai-u.ac.jp">han</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>nav2_simple_commander</depend>
  <depend>geographic_msgs</depend>
  <depend>waypoint_pkg</depend>
  <depend>waypoint_pkg_interfaces</depend>
  <depend>python3-ruamel.yaml</depend>
  <depend>python3-open3d</depend>
  <depend>python3-pycurl</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-pymap3d</depend>
  <depend>python3-pyproj</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
